# AdventOfCode23

./: AdventOfCode23.cabal  CHANGELOG.md  README.md
app/: Main.hs
src/: Commons.hs  Task1.hs  Task10.hs  Task11.hs  Task12.hs  Task13.hs  Task14.hs  Task15.hs  Task16.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs  Task8.hs  Task9.hs
tests/: CommonsSpec.hs  Spec.hs  Task1.test.hs  Task10Spec.hs  Task11Spec.hs  Task12Spec.hs  Task13Spec.hs  Task14Spec.hs  Task15Spec.hs  Task16Spec.hs  Task2Spec.hs  Task3Spec.hs  Task4Spec.hs  Task5Spec.hs  Task6Spec.hs  Task7Spec.hs  Task8Spec.hs  Task9Spec.hs
