cabal-version:      3.6
name:               AdventOfCode23
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable AdventOfCode23
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Task1

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , HUnit >= 1.6 && < 1.7
    hs-source-dirs:   app, src
    default-language: Haskell2010

test-suite AdventOfCode23-test
    type:                exitcode-stdio-1.0
    main-is:             Task1.test.hs
    other-modules:       Task1
    build-depends:       base ^>=4.16.4.0
                       , HUnit >= 1.6 && < 1.7
    hs-source-dirs:      tests, src
    default-language:    Haskell2010

